updated generate-templates logic

--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -37,8 +37,8 @@ jobs:
 
       - name: Commit changes to current branch
         run: |
-          git add ../../services/**/templates/arm
-          git add ../../services/**/templates/bicep
+          git add services/**/templates/arm
+          git add services/**/templates/bicep
           git commit -m "Generate templates for alerts"
           git push
 
