updated workflow to push changes

--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Commit changes to current branch
         run: |
-          git add --force --quiet services
+          git add --force --no-verbose services
           git commit -m "Generate templates for alerts"
           git push
 
