--- a/.github/workflows/hugo-build-pr-check.yml
+++ b/.github/workflows/hugo-build-pr-check.yml
@@ -28,6 +28,12 @@ jobs:
     env:
       HUGO_VERSION: 0.117.0
     steps:
+      - name: Wait
+        uses:  willgarcia/workflow-wait-action@v0.1.0
+        with:
+          workflow: |
+            Generate Templates
+
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
