updated workflow to push changes

--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -39,11 +39,10 @@ jobs:
 
       - name: Commit changes to current branch
         run: |
-          echo "Branch: ${GITHUB_HEAD_REF}"
           git add --force services
           git commit -m "Generate templates for alerts"
           # Push changes to the PR branch
-          git push origin HEAD:${GITHUB_REF#refs/heads/}
+          git push origin ${GITHUB_HEAD_REF}
 
 
 
