updated workflow to push changes

--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -10,6 +10,7 @@ on:
     paths:
       - 'services/**/alerts.yaml'
       - 'tooling/generate-templates/**'
+      - 'workflow-templates/generate-templates.yml'
 
 jobs:
   generate-templates:
