updated workflow to push changes

--- a/services/EventGrid/domains/alerts.yaml
+++ b/services/EventGrid/domains/alerts.yaml
@@ -2,7 +2,7 @@
   description: Total events failed to deliver to this event subscription
   type: Metric
   verified: false
-  visible: false
+  visible: true
   tags:
   - auto-generated
   - agc-305
