--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -40,7 +40,7 @@ jobs:
           git config --local user.name "github-actions[bot]"
 
           # Checkout the github-action-generate-templates branch (create if doesn't exist)
-          git checkout -B github-action-generate-templates --set-upstream-to=origin
+          git checkout -B github-action-generate-templates
 
           # Pull the latest changes from the main branch
           git pull --rebase
