updated workflow to push changes

--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -44,7 +44,7 @@ jobs:
           git branch --set-upstream-to=origin github-action-generate-templates
 
           # Pull the latest changes from the main branch
-          git pull --rebase
+          git pull
 
           # Generate templates for alerts
           echo "Generating templates for alerts..."
