--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -44,7 +44,7 @@ jobs:
           git branch --set-upstream-to=origin/main github-action-generate-templates
 
           # Pull the latest changes from the main branch
-          git pull
+          git pull --rebase
 
           # Generate templates for alerts
           echo "Generating templates for alerts..."
@@ -58,7 +58,7 @@ jobs:
             git commit -m "[GitHub Action - Generate Templates] Generate templates for alerts"
 
             # Push changes to the current branch
-            git push origin github-action-generate-templates
+            git push -u origin github-action-generate-templates -f
 
             # Create a pull request
             echo "Creating a pull request..."
