updated workflow to push changes

--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  update-files:
+  generate-templates:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
