--- a/services/Relay/namespaces/alerts.yaml
+++ b/services/Relay/namespaces/alerts.yaml
@@ -2,7 +2,7 @@
   description: Total ActiveListeners for Microsoft.Relay.
   type: Metric
   verified: false
-  visible: true
+  visible: false
   tags:
   - auto-generated
   - agc-777
