--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -72,6 +72,9 @@ jobs:
                 --base 'main' \
                 --json title \
                 --jq 'length')
+
+            echo "prs=$prs"
+
             if ((prs > 0)); then
                 echo "skippr=true" >> "$GITHUB_OUTPUT"
             fi
