--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -66,7 +66,7 @@ jobs:
             git pull origin main
 
             # Push changes to the current branch
-            git push
+            git push origin github-action-generate-templates
 
             prs=$(gh pr list \
                 --repo "$GITHUB_REPOSITORY" \
