--- a/.github/workflows/generate-templates.yml
+++ b/.github/workflows/generate-templates.yml
@@ -57,7 +57,7 @@ jobs:
           if [[ `git status --porcelain` ]]; then
             git commit -m "[GitHub Action - Generate Templates] Generate templates for alerts"
 
-            git merge main
+            git pull -X ours origin main
 
             # Push changes to the current branch
             git push origin github-action-generate-templates
