--- a/services/KeyVault/vaults/alerts.yaml
+++ b/services/KeyVault/vaults/alerts.yaml
@@ -174,7 +174,7 @@
   description: Number of total service api hits
   type: Metric
   verified: false
-  visible: true
+  visible: false
   tags:
   - auto-generated
   - agc-1137
