--- a/services/HealthcareApis/services/alerts.yaml
+++ b/services/HealthcareApis/services/alerts.yaml
@@ -2,7 +2,7 @@
   description: The response latency of the service.
   type: Metric
   verified: false
-  visible: false
+  visible: true
   tags:
   - auto-generated
   - agc-379
